--- a/app/src/main/res/layout/fragment_comparacao.xml
+++ b/app/src/main/res/layout/fragment_comparacao.xml
@@ -22,5 +22,13 @@
             android:text="@string/info_comparacao_p2"
             android:textSize="18sp"
             android:layout_marginTop="10dp" />
+
+        <VideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:visibility="visible" />
     </LinearLayout>
 </FrameLayout>
