--- a/app/src/main/res/layout/fragment_transporte_passivo.xml
+++ b/app/src/main/res/layout/fragment_transporte_passivo.xml
@@ -12,21 +12,17 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/info_passivo"
             android:textSize="18sp" />
 
         <VideoView
-            android:id="@+id/videoview"
-            android:layout_width="300dp"
+            android:id="@+id/video"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
             android:visibility="visible" />
-
-        <Button
-            android:text="Play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"/>
     </LinearLayout>
 
 </FrameLayout>
