--- a/app/src/main/res/layout/fragment_transporte_ativo.xml
+++ b/app/src/main/res/layout/fragment_transporte_ativo.xml
@@ -5,11 +5,24 @@
     android:layout_height="match_parent"
     tools:context=".TransporteAtivoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/info_ativo"
-        android:textSize="18sp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/info_ativo"
+            android:textSize="18sp" />
+
+        <VideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:visibility="visible" />
+    </LinearLayout>
 
 </FrameLayout>
