--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,5 +5,6 @@
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/action_about"
-        app:showAsAction="never" />
+        android:icon="@android:drawable/ic_menu_info_details"
+        app:showAsAction="always" />
 </menu>
