--- a/app/src/main/res/layout/fragment_video_aulas.xml
+++ b/app/src/main/res/layout/fragment_video_aulas.xml
@@ -6,9 +6,23 @@
     tools:context=".VideoAulasFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Video Aulas" />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Para mais vídeos explicativos acesse o endereço abaixo:" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:autoLink="web|all"
+            android:text="https://www.youtube.com/channel/UCf9N15y_3Mt0onO72Xp8PqQ?view_as=subscriber" />
+    </LinearLayout>
 
 </FrameLayout>
